# calculus-api

./: .gitignore  README.md  main.py  pyproject.toml
app/multivariable/routers/: partial_derivatives.py  vector_calc.py
app/singlevariable/routers/: differentiate.py  integrate.py  limit.py
app/utils/: equation_processing.py  middleware_models.py  vector_input_processing.py  vector_processing.py
