[tool.poetry]
name = "calculus-api"
version = "0.1.0"
description = ""
authors = ["jthom2 <134821369+jthom2@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sympy = "^1.13.3"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
openai = "^1.48.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
